# meteonetwork-api-client-python

./: .coverage  .gitignore  LICENSE  README.md  client.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: main.yml
src/meteonetwork_api/: client.py  constants.py
tests/: sample_responses.py  test_client.py
