[project]
name = "meteonetwork-api-client-python_dennyb87"
version = "0.0.1"
authors = [
  { name="Denny Baldini", email="dennybaldini@gmail.com" },
]
description = "Simple python client for meteonetwork api"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dennyb87/meteonetwork-api-client-python"
Issues = "https://github.com/dennyb87/meteonetwork-api-client-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"